# llama.go

./: .gitignore  .gitmodules  Makefile
.github/workflows/: ci.yml
app/: app.go  cmds.go
config/: config.go
core/: CMakeLists.txt
core/include/: core.h  info.h
core/scripts/: gzip_file.cmake
core/src/: build_info.cpp  interactive.cpp  process.cpp  safe_queue.h  server.cpp  server.h  whisper_service.cpp
core/src/server/: copy.sh  server-context.h  server-http.h  server-models.cpp  server.cpp  server.h
core/tests/: test_runner.cpp  test_runner_chat.cpp  test_runner_gen.cpp
scripts/: build.sh  tag.sh  test.sh
server/: service.go
version/: version.go
wrapper/: bridge.go  flags_darwin.go  flags_linux.go  flags_linux_cuda.go  flags_windows.go
